# ExpBoostedTree

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg
docs/: Makefile  boosted_explainer.rst  conf.py  index.rst  permutation_explainer.rst  shap_explainer.rst
examples/: demo_boosted_regression.py
explainboostedregg/: __init__.py  base.py  boosted_explainer.py  permutation_explainer.py  plots.py  shap_explainer.py
tests/: test_boosted_explainer.py  test_permutation_explainer.py  test_shap_explainer.py
